--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-#misc
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# misc
 # .env
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
