--- a/client/.gitignore
+++ b/client/.gitignore
@@ -7,7 +7,7 @@
 /coverage
 
 # production
-/build
+# /build
 
 # misc
 .DS_Store
@@ -16,7 +16,7 @@
 .env.test.local
 .env.production.local
 
-spells.json
+# spells.json
 
 npm-debug.log*
 yarn-debug.log*
