--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "seed": "node scripts/seedDB.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
@@ -26,6 +25,7 @@
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.12",
+    "nodemon": "^1.18.8",
     "npm": "^6.4.1",
     "path": "^0.12.7"
   }
