--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "jsonwebtoken": "^8.4.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "react-spring": "^8.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
