--- a/.gitignore
+++ b/.gitignore
@@ -5,18 +5,18 @@
 /coverage
 
 # production
-# /build
+/build
 
 
 # misc
-# .env
+.env
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# spells.json
+spells.json
 
 npm-debug.log*
 yarn-debug.log*
